--- a/LowadiBot/App.xaml
+++ b/LowadiBot/App.xaml
@@ -12,30 +12,15 @@
 
 
             <Style TargetType="Separator">
-                <Setter Property="Margin" Value="2" />
-            </Style>
-
-            <Style TargetType="DataGrid">
-                <Setter Property="Margin" Value="5" />
-            </Style>
-
-            <Style TargetType="Button">
-                <Setter Property="Margin" Value="5" />
-                <Setter Property="Height" Value="25" />
+                <Setter Property="Margin" Value="2,5" />
             </Style>
 
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="2" />
             </Style>
 
-            <Style TargetType="CheckBox">
+            <Style TargetType="DataGrid">
                 <Setter Property="Margin" Value="2" />
-                <Setter Property="VerticalContentAlignment" Value="Center" />
-            </Style>
-
-            <Style TargetType="ComboBox">
-                <Setter Property="Margin" Value="2" />
-                <Setter Property="Height" Value="25" />
             </Style>
 
             <Style TargetType="TextBox">
@@ -47,6 +32,25 @@
             <Style TargetType="PasswordBox">
                 <Setter Property="Margin" Value="2" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
+                <Setter Property="Height" Value="25" />
+            </Style>
+
+            <Style TargetType="CheckBox">
+                <Setter Property="Margin" Value="2" />
+                <Setter Property="Height" Value="25"/>
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+                <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+                <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+                <Setter Property="ScrollViewer.CanContentScroll" Value="true" />
+            </Style>
+
+            <Style TargetType="ComboBox">
+                <Setter Property="Margin" Value="2,5" />
+                <Setter Property="Height" Value="25" />
+            </Style>
+
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="2" />
                 <Setter Property="Height" Value="25" />
             </Style>
 
